src/css/menu.css
.menu-content {
    width: 80%;
    height: 80%;
    display: grid;
    grid-template-columns: 5rem auto 5rem;

}

.menu-items {
    width: 100%;
    height: 100%;

    overflow: hidden;
    display: flex;
    position: relative;
}

.menu-item {
    padding: 0 2rem;

    position: absolute;
    width: calc(100% - 4rem);
    height: 100%;
    display: grid;
    grid-template-columns: 2fr 1fr;
    overflow: hidden;
    border-radius: 1rem;
}

.menu-image-container {
    width: 100%;
    height: 100%;
    border-radius: 1rem 0 0 1rem;
    overflow: hidden;
    position: relative;
}

.menu-image-container::after {
    content: '';
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.5));
    z-index: 10;

    pointer-events: none;
}

.menu-image-container h2 {
    position: absolute;
    z-index: 11;
    letter-spacing: 1.5pt;
    word-spacing: 1pt;
    user-select: none;

    font-family: 'BiteChalk Normal';
    font-size: clamp(50pt, 24pt, 12pt);
    bottom: 5%;
    left: 5%;
    letter-spacing: 2.5pt;
    word-spacing: 2pt;
    color: var(--text-white);
}

.menu-item img {
    object-fit: cover;
    position: absolute;
    transition: width 100ms ease-out, scale 100ms ease-out;
}

.menu-item-description {
    background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));

    border-radius: 0 1rem 1rem 0;
}

.menu-slide-left-button,
.menu-slide-right-button {
    display: flex;
    justify-content: center;
    align-items: center;

    cursor: pointer;
}

.menu-slide-left-button svg,
.menu-slide-right-button svg {
    height: 100%;
    width: 100%;
}

.menu-slide-left-button svg path,
.menu-slide-right-button svg path {
    color: var(--text-white);
}

.menu-slide-left-button svg {
    rotate: 180deg;
}

#menu-item-1 {
    transition: transform 700ms ease-in-out, width 100ms ease-out;
}

#menu-item-1 img {
    object-position: 40% 25%;
}

#menu-item-2 {
    translate: 100% 0;
    transition: transform 700ms ease-in-out, width 100ms ease-out;
}

#menu-item-2 img {
    object-position: 0% 65%;
}

#menu-item-3 {
    translate: 200% 0;
    transition: transform 700ms ease-in-out, width 100ms ease-out;
}

#menu-item-3 img {
    object-position: 0% 75%;
}

/**/
.menu-item-1-slide-1 {
    transform: translateX(-100%);
}

.menu-item-2-slide-1 {
    transform: translateX(-100%);
}

.menu-item-3-slide-1 {
    transform: translateX(-100%);
}

/**/
.menu-item-1-slide-2 {
    transform: translateX(-200%);
}

.menu-item-2-slide-2 {
    transform: translateX(-200%);
}

.menu-item-3-slide-2 {
    transform: translateX(-200%);
}

